src/test/deca/context/valid/provided/Dec_multiple_extands_class.deca
// Descrption : on essaye d'heriter plusieurs class 
// Resultats :
//

class A {
	protected int x ;
	}

class B extends A {}

class C extends B {}

class D extends C {}
