src/test/deca/context/invalid/provided/BadExtends.deca
// DESCRIPTION: heriter d'une class qui n'existe pas
// RESULTAT: 

class B extends C {

}
